--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "msgpack-json-tools"
 version = "0.1.0"
 authors = ["Mizki SUZUMORI <suzumorimizuki@gmail.com>"]
+edition = "2018"
 
 [dependencies]
 structopt = "0.2"
